--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-CO_TOKEN=bedy5mypjirubkjbfhjizc96fr
-CO_CHANNEL=unmi9hpqq7n1djwue5mfwi1cqy
+CO_TOKEN=bedy5mypjirufhjizc96fr
+CO_CHANNEL=unmi9hpqqwue5mfwi1cqy
+CO_BASE_URL=https://example.com/api/v4
